--- a/001-First-Steps/First Steps - Chap 03 - Exercises.ipynb
+++ b/001-First-Steps/First Steps - Chap 03 - Exercises.ipynb
@@ -3,14 +3,14 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "First Steps - Chap 03 - Demo",
+      "name": "Copy of First Steps - Chap 03 - Exercises",
       "provenance": [],
       "private_outputs": true,
       "collapsed_sections": [
         "n2Y1tAFyVuq8",
         "NuIaiuaQ9CRr"
       ],
-      "authorship_tag": "ABX9TyOaNNSXxncJxLm0OfIr+RUd",
+      "authorship_tag": "ABX9TyMHa3PFuBEkD4TmzRYe4laT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,104 +26,75 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/cstar-industries/python-3-beginner/blob/master/001-First-Steps/First%20Steps%20-%20Chap%2003%20-%20Demo.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/cstar-industries/python-3-beginner/blob/master/001-First-Steps/First%20Steps%20-%20Chap%2003%20-%20Exercises.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "n2Y1tAFyVuq8",
+        "id": "VAbcCXdDrASk",
         "colab_type": "text"
       },
       "source": [
-        "## Strings"
+        "## 1. Fix the strings\n",
+        "\n",
+        "All of the strings in the following block have something wrong. Find a way to fix them, then output all of them.\n",
+        "\n",
+        "```\n",
+        "I'm learning Python.\n",
+        "Python is fun!\n",
+        "All my friends keep telling me: \"you should learn Python\"\n",
+        "This is snek...\n",
+        "hissss hissss\n",
+        "```"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "3L7k3mELVq3-",
+        "id": "X0rbooimrqGB",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "print(\"Hello World\")"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "bjNco2FhV6DE",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "print('Hello World!')"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "5fuobXowV832",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "print('I've been working on my Python!')"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "AY6XTUbQWEjf",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "print('I\\'ve been working on my Python!')\n",
-        "print(\"I've been working on my Python!\")"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "-Dc2Td69WQ43",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "print('This is a line.\\nThis is a new line.')"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "EWBZy3arWanr",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "opening_line = 'It was a bright cold day in April, and the clocks were striking thirteen.'\n",
+        "learning = 'I'm learning Python.'\n",
+        "fun = \"Python is fun!'\n",
+        "friends = \"All my friends keep telling me: \"you should learn Python\"\"\n",
+        "snek = \"This is snek...\n",
+        "hissss hissss\"\n",
         "\n",
-        "print(opening_line)"
+        "print(learning)\n",
+        "print(fun)\n",
+        "print(friends)\n",
+        "print(snek)"
       ],
       "execution_count": 0,
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5cBVPCiTr4DV",
+        "colab_type": "text"
+      },
+      "source": [
+        "## 2. String statistics\n",
+        "\n",
+        "Ask the user for any amount of text, and output the length of the text, the first letter and the last letter.\n",
+        "\n",
+        "```\n",
+        "Enter some text: We were somewhere around Barstow on the edge of the desert when the drugs began to take hold.\n",
+        "\n",
+        "Text length: 93 characters\n",
+        "First character: W\n",
+        "Last character: .\n",
+        "```"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "Ok3y40uNWx3R",
+        "id": "7nQBijKDs5qJ",
         "colab_type": "code",
         "colab": {}
       },
@@ -136,198 +107,33 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "NuIaiuaQ9CRr",
+        "id": "7ZVjUsz_t30Q",
         "colab_type": "text"
       },
       "source": [
-        "## String operators"
+        "## 3. Uppercase/lowercase\n",
+        "\n",
+        "Ask the user for a few words as input, and print the words in lowercase, then uppercase.\n",
+        "\n",
+        "```\n",
+        "Enter a few words: hello\n",
+        "\n",
+        "HELLO\n",
+        "hello\n",
+        "```\n",
+        "\n",
+        "Try for a number of different words including numbers, symbols and special characters. What happens?"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "EEY9hiZd9FUb",
+        "id": "B0x7iK3PuXHp",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "spam = \"spam\"\n",
-        "comma_space = \", \"\n",
-        "eggs = \"eggs\"\n",
-        "\n",
-        "print(spam + \" and \" + eggs)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "7EcuSbKd9Sae",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "print(8*spam)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "rfGS3NVT9VSX",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "lunch = 5 * (spam + comma_space) + eggs + \" and \" + spam\n",
-        "print(lunch)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "HSV4ypHm9iW2",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "print(len(\"Hello World!\"))\n",
-        "print(len(spam))\n",
-        "print(len(lunch))"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "qjTJ_UnN9u7-",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "spam[0]"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "gN5l6Dqq9yBC",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "spam[1]"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "2Z7Z_Ibz91PC",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "spam[3]"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "ffaEtKxA94WY",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "spam[-1]"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "UsX2_cCF96CK",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "(spam + eggs)[4]"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "2JkYvNV19-FJ",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "spam[1:]"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "e1CeEtMg-BwO",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "spam[1:-1]"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "fCQl4PQ4-DiT",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "spam[-2:]"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "3aCy0_7h-Hdy",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "spam[8]"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Bm-G7mby-d5x",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "spam[3] = 'r'"
+        ""
       ],
       "execution_count": 0,
       "outputs": []
@@ -335,66 +141,76 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "yVZkNI-w_Tbq",
+        "id": "pxezSG_ouqMl",
         "colab_type": "text"
       },
       "source": [
-        "## String methods"
+        "## 4. Split words\n",
+        "\n",
+        "The `str` type has `split` method that comes in very handy when processing text.\n",
+        "\n",
+        "Try using it on the text in the example text. Then try using it passing different characters as argument, such as `' '`, `'\\n'` and others.\n",
+        "\n",
+        "> What is the type of the object returned by calling `split`? This type will be most interesting in Python and we will learn more about is very soon."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "F0bUBlZZ_VYu",
+        "id": "-qiAzl60vCQr",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "s = '\\thEllO   \\n'\n",
-        "\n",
-        "print(s)"
+        "# What's this? Three double-quotes denotes a multi-line string. Instead of\n",
+        "# breaking at a new line, the new line is captured in the string. Only a matching\n",
+        "# set of three double-quotes can close the string.\n",
+        "the_stranger = \"\"\"MOTHER died today. Or, maybe, yesterday; I can’t be sure. The telegram from the\n",
+        "Home says: YOUR MOTHER PASSED AWAY. FUNERAL TOMORROW. DEEP\n",
+        "SYMPATHY. Which leaves the matter doubtful; it could have been yesterday.\n",
+        "The Home for Aged Persons is at Marengo, some fifty miles from Algiers. With\n",
+        "the two o’clock bus I should get there well before nightfall. Then I can spend the\n",
+        "night there, keeping the usual vigil beside the body, and be back here by tomorrow\n",
+        "evening. I have fixed up with my employer for two days’ leave; obviously, under the\n",
+        "circumstances, he couldn’t refuse. Still, I had an idea he looked annoyed, and I said,\n",
+        "without thinking: “Sorry, sir, but it’s not my fault, you know.”\"\"\""
       ],
       "execution_count": 0,
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "6l74JQsK_ewc",
-        "colab_type": "code",
-        "colab": {}
+        "id": "mviCFCl1sDlp",
+        "colab_type": "text"
       },
       "source": [
-        "s1 = s.strip()\n",
+        "## 5. Replacing characters in a string\n",
         "\n",
-        "print(s1)"
-      ],
-      "execution_count": 0,
-      "outputs": []
+        "Using the string `the_stranger` from the previous, and the `replace` method on `str`, transform the paragraph into one long line.\n",
+        "\n",
+        "The first block is an example of using `replace`. Run it to see how it works, and play with it to understand better.\n",
+        "\n",
+        "Next, use the `replace` method on `the_stranger` and print out a one-line version of the multi-line paragraph."
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6in5u1sP_sGa",
+        "id": "cOGIilC3tFyE",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "print(s)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "q5yW17Bu_m33",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "s2 = s.upper()\n",
+        "s = \"i thought i saw a pussycat.\"\n",
         "\n",
+        "s2 = s.replace('i', 'I')\n",
+        "print(s2)\n",
+        "\n",
+        "s2 = s2.replace('s', 'th')\n",
+        "print(s2)\n",
+        "\n",
+        "s2 = s2.replace('thaw', 'heard')\n",
         "print(s2)"
       ],
       "execution_count": 0,
@@ -403,279 +219,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "7Kd5Bqav_vIx",
+        "id": "KFwVKC09tmzP",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "print(s.lower())\n",
-        "print(s.title())"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "4c1xSN3H_yYY",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "s3 = s.strip().title()\n",
-        "\n",
-        "print(s3 + ' World!')"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "PaG2YejZAIhn",
-        "colab_type": "text"
-      },
-      "source": [
-        "## Type conversion"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "T_hDVEGsAKJz",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "a = 1\n",
-        "\n",
-        "print('one is ' + 1)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "v4Ff5alTA5By",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "print('one is ' + str(1))"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "f1CcGGf-FONW",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "type(12345)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "7zSjWRTRBEVx",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "type(str(12345))"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "e_pSzfZPFXOn",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "float(12345)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "D7P-tP2hFhm8",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "int(12.345)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "bGO0jUSBFjqi",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "int(\"12345\")"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "0Uio6ytEFnwu",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "int(\"12.345\")"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "nGlZczsXFr8y",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "float(\"12345\")"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "ZXxdPMqtFuhx",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "float(\"12.345\")"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "QP3Z9ikAFwr3",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "int(\"1000\", 2)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "dIFH90qTF6nK",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "int(\"ff\", 16)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "QYt8x6zOF8qj",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "int(\"deadbeef\", 16)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "uG-42NFEGxnN",
-        "colab_type": "text"
-      },
-      "source": [
-        "## Format strings"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "2lt3G8CvG4t-",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "a = 2\n",
-        "\n",
-        "print(f'a = {a}')"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "FnQN6543G_uw",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "print(f'{a} squared is {a*a}')"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "gUDqyfycHPd8",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "import math\n",
-        "\n",
-        "print(f'The square root of {a} is approximately {math.sqrt(a):.2f}')"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "L_nZ6HSwI3Rl",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "word = 'Hello'\n",
-        "\n",
-        "print(f'{word:_<15}')\n",
-        "print(f'{word:*^15}')\n",
-        "print(f'{word:_>15}')"
+        ""
       ],
       "execution_count": 0,
       "outputs": []
