--- a/001-First-Steps/First Steps - Workshop.ipynb
+++ b/001-First-Steps/First Steps - Workshop.ipynb
@@ -6,7 +6,9 @@
       "name": "First Steps - Workshop",
       "provenance": [],
       "private_outputs": true,
-      "collapsed_sections": [],
+      "collapsed_sections": [
+        "-dgkvGfnbVHk"
+      ],
       "toc_visible": true,
       "include_colab_link": true
     },
@@ -433,6 +435,64 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XkJEFmXNtKad",
+        "colab_type": "text"
+      },
+      "source": [
+        "## 5. Hex to string\n",
+        "\n",
+        "The following string is an encoded message. Each character in the message has been replaced by its 2-digit hexadecimal character number.\n",
+        "\n",
+        "$'A' \\equiv 65_{decimal} \\equiv 41_{hex}$\n",
+        "\n",
+        "You will need a new tool to solve this problem. The `chr` function takes a number and returns the character corresponding to the number.\n",
+        "\n",
+        "```\n",
+        "chr(65)\n",
+        "'A'\n",
+        "```\n",
+        "\n",
+        "A few hints you might need to solve this problem:\n",
+        "\n",
+        "* Use `len` to find the length of the string. Don't count on your fingers when you have Python!\n",
+        "* Use `str` indexing to extract characters 2-by-2 from the string.\n",
+        "* Use the `int()` conversion function to convert hexadecimal strings into integers"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Iilolfid25Db",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "hex_string = '47726561742053636f747421'"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "E_v0-W4M3P7Z",
+        "colab_type": "text"
+      },
+      "source": [
+        "_Note:_\n",
+        "\n",
+        "With the tools at your disposal today, you probably wrote a lot of code to solve this simple problem. Don't worry, next lesson, we'll learn some powerful tools to reduce the amount of repetitive code. Python can be very expressive, and it is often possible to process large amounts of data with very little code. While making this exercise, I solved it with a single short line of Python!\n",
+        "\n",
+        "> **BONUS:** The inverse function of `chr` is `ord`.\n",
+        "> ```\n",
+        "ord('A')\n",
+        "65\n",
+        "```"
+      ]
     }
   ]
 }
