restore chapter 1 demo for the millionth time

--- a/001-First-Steps/First Steps - Chap 01 - Demo.ipynb
+++ b/001-First-Steps/First Steps - Chap 01 - Demo.ipynb
@@ -3,13 +3,15 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "First Steps - Chap 02 - Demo",
+      "name": "First Steps - Chap 01 - Demo",
       "provenance": [],
       "private_outputs": true,
       "collapsed_sections": [
-        "AYX0yhyeDMZi"
+        "8PorNC9DpNmC",
+        "k8TX3jKjpe2b",
+        "cjerTn0RqmSj"
       ],
-      "authorship_tag": "ABX9TyMicNs270/IVMPqUu2UBPcY",
+      "authorship_tag": "ABX9TyOFFi9kwzfW5wTZ/FXBDd4t",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,22 +33,22 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "AYX0yhyeDMZi",
+        "id": "8PorNC9DpNmC",
         "colab_type": "text"
       },
       "source": [
-        "## Meet the numbers"
+        "## Print some text"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "l1WEGaS8o0Sd",
+        "id": "f_ZaZKfko6n-",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "42"
+        "print(\"Hello World\")"
       ],
       "execution_count": 0,
       "outputs": []
@@ -54,12 +56,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-PEao02iDT_Y",
+        "id": "jmquDVbvpTx4",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "0.5"
+        "print(3)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -67,57 +69,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "kxsjLbGkDVm6",
+        "id": "DNaodKCmpVzE",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "print(5.43e9)\n",
-        "print(1e-3)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "j8iav9cADqk0",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "print(1/2)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "g-Cu-jpTDsz8",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "a = 3\n",
-        "b = 4\n",
-        "\n",
-        "print(a / b)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "frwasojFD04Q",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "print(type(a))\n",
-        "print(type(b))\n",
-        "print(type(a / b))"
+        "print(a)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -125,22 +82,22 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "AoRttUxyEvtm",
+        "id": "k8TX3jKjpe2b",
         "colab_type": "text"
       },
       "source": [
-        "## Meet the operators"
+        "## Do some math"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "7gZbXZCAEyfu",
+        "id": "lvm2aOSqpgvO",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "1 + 1"
+        "3 + 2"
       ],
       "execution_count": 0,
       "outputs": []
@@ -148,20 +105,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "I5WZaMgKE08T",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "1 + 1 + 1"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "NrkKxmp9FLE6",
+        "id": "acxnUv3Cpidu",
         "colab_type": "code",
         "colab": {}
       },
@@ -174,12 +118,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "vSSdf1-OFOZb",
+        "id": "oVVsfv0jptfN",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "9 / 3"
+        "1e6"
       ],
       "execution_count": 0,
       "outputs": []
@@ -187,33 +131,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "riLg_Uk6E2rZ",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "1 + 2 + 3 * 3"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "6fQ6YwStFEtI",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "(1 + 2 + 3) * 3"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "RkMauQETGA7t",
+        "id": "W7zMoKtHpnla",
         "colab_type": "code",
         "colab": {}
       },
@@ -226,25 +144,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Cxtl8Sw5KrWu",
+        "id": "lVLWyU1cpzqy",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "10 // 3"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "9b1twm5aKthx",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "10 % 3"
+        "2 ** 1000"
       ],
       "execution_count": 0,
       "outputs": []
@@ -252,22 +157,23 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "FLFY1CygK6ey",
+        "id": "cjerTn0RqmSj",
         "colab_type": "text"
       },
       "source": [
-        "## Deeper math"
+        "## Variables"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "VZiF-tZ6K-06",
+        "id": "HsonC2sTqq4b",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "3+2j"
+        "a = 1138\n",
+        "print(a)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -275,12 +181,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "NFDVgUxkLDgC",
+        "id": "B2Zi7Qrrq8ul",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "3+2j + 3-2j"
+        "print(a - 138)\n",
+        "print(a)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -288,12 +195,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "qTEtxZYALKFM",
+        "id": "VM3DHkturEpS",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "type(3+2j)"
+        "type(a)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -301,56 +208,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "qYgc3DhNLMZ0",
+        "id": "vHE598KbrGaj",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "print(abs(128.3))\n",
-        "print(abs(-4))"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "ETIFgbfhMHD1",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "print(abs(3+4j))"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Rmt23XXBMjT-",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "import math\n",
-        "\n",
-        "print(math.sqrt(2) / 2)\n",
-        "print(math.cos(math.pi / 4))"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "WxNNN0yeM5lb",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "print(math.floor(1.2))\n",
-        "print(math.ceil(1.2))"
+        "del a\n",
+        "print(a)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -358,25 +222,22 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "YQMEhbFwNOHa",
+        "id": "3fk0EeV5re3u",
         "colab_type": "text"
       },
       "source": [
-        "## Assignment operators"
+        "## Capture keyboard input"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "y0n-j29xNQLJ",
+        "id": "L1CeyNlbrlQ0",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "a = 1\n",
-        "a += 2\n",
-        "\n",
-        "print(a)"
+        "input()"
       ],
       "execution_count": 0,
       "outputs": []
@@ -384,30 +245,41 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "LzbCwPG6NUJ0",
+        "id": "hXvG7rLKrtxn",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "a *= 3\n",
-        "\n",
-        "print(a)"
+        "name = input(\"What's your name? \")\n",
+        "print(\"Your name is\", name)"
       ],
       "execution_count": 0,
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Ou4Z_TL1szv5",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Multiple statements in a block"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "QP_JhCxpNWv1",
+        "id": "YEasqe49s3ds",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "a /= 9\n",
-        "a += (4 + 1)\n",
+        "one = 1\n",
+        "two = 2\n",
+        "three = \"three\"\n",
         "\n",
-        "print(a)"
+        "print(one, two)\n",
+        "print(three, \"3\")"
       ],
       "execution_count": 0,
       "outputs": []
