--- a/001-First-Steps/First Steps - Workshop.ipynb
+++ b/001-First-Steps/First Steps - Workshop.ipynb
@@ -493,6 +493,42 @@
         "65\n",
         "```"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jnPxPiJyZV_V",
+        "colab_type": "text"
+      },
+      "source": [
+        "## 6. Cross-multiplication revisited\n",
+        "\n",
+        "Given the price of a dozen eggs, find the price of an arbitrary number of eggs, given by the user.\n",
+        "\n",
+        "Use format strings to display prices with 2 digits after the decimal point.\n",
+        "\n",
+        "```\n",
+        "Price of a dozen eggs: $11.00\n",
+        "How many eggs do you want? 14\n",
+        "\n",
+        "14 eggs will cost $12.83\n",
+        "```\n",
+        "\n",
+        "You can find the format string specification in [the Python documentation](https://docs.python.org/3/library/string.html#format-specification-mini-language)."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tFYhiPsFZjvo",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "dozen_price = 11.0"
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
