--- a/002-Control-Flow/Control Flow - Chap 03 - Exercises.ipynb
+++ b/002-Control-Flow/Control Flow - Chap 03 - Exercises.ipynb
@@ -6,7 +6,7 @@
       "name": "Control Flow - Chap 03 - Exercises",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyPjgI7TPUsf2pLVxr7ZABaE",
+      "authorship_tag": "ABX9TyP6pa5OIAs0nDbGYV8qhJgZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,11 +28,46 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "EnFnorucJ0X8",
+        "colab_type": "text"
+      },
+      "source": [
+        "## 1. List workout\n",
+        "\n",
+        "The variable `l` contains a `list`. Write a program that outputs the following:\n",
+        "\n",
+        "* The 4th item of the list\n",
+        "* The type of the 2nd item\n",
+        "* If the 5th item is a `str`:\n",
+        "  * The 1st letter\n",
+        "* If the 5th item is an `int`:\n",
+        "  * The 1st digit\n",
+        "* `True` if the 3rd item is larger than the 4th, `False` otherwise"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wJm_bLmfKf3M",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "l = [1e6, [], 999, 998, 'ninenineseven']\n",
+        "\n",
+        "# Your code start here..."
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "EBpp85ZTEFdr",
         "colab_type": "text"
       },
       "source": [
-        "## 1. Count to ten\n",
+        "## 2. Count to ten\n",
         "\n",
         "Write a program that asks the user for an integer, then counts out loud from 1 to that number.\n",
         "\n",
@@ -60,7 +95,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## 2. Mathematical sequences\n",
+        "## 3. Mathematical sequences\n",
         "\n",
         "Using `for` iterations, output the first 10 items of the following math sequences:\n",
         "\n",
@@ -78,60 +113,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "hEIol3dwBlGI",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "nlFY19L_E0tf",
-        "colab_type": "text"
-      },
-      "source": [
-        "## 3. Mocking SpongeBob text generator\n",
-        "\n",
-        "Write a program that asks a user to say something then repeats it to them in a mocking fashion, by alternating uppercase and lowercase letters.\n",
-        "\n",
-        "Rules:\n",
-        "\n",
-        "* if the letter's position in the sentence is an even number, use a lowercase letter\n",
-        "* otherwise, use an uppercase letter\n",
-        "\n",
-        "Example:\n",
-        "\n",
-        "```\n",
-        "Say something: I can code in Python.\n",
-        "i cAn cOdE In pYtHoN\n",
-        "```\n",
-        "\n",
-        "![](https://i.imgflip.com/3we4li.jpg)\n",
-        "\n",
-        "> **HINT:** To build a new string, start with an empty string (`s = ''`) and extend it every loop by concatening and reassigning it to the same variable (`s += 'a'`).\n",
-        ">\n",
-        "> ```python\n",
-        "s = ''\n",
-        "for i in range(5):\n",
-        "  s += 'a'\n",
-        "print(s)\n",
-        "```\n",
-        ">\n",
-        "> ```\n",
-        "aaaaa\n",
-        "```\n",
-        ">\n",
-        "> Also, remember `len(s)` to get the string length, and `s[i]` to get the `i`th character."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Hd7BhYf0HgNy",
         "colab_type": "code",
         "colab": {}
       },
