--- a/002-Control-Flow/Control Flow - Workshop.ipynb
+++ b/002-Control-Flow/Control Flow - Workshop.ipynb
@@ -6,7 +6,7 @@
       "name": "Control Flow - Workshop",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyMBxSa1SMCaM9JZMFft0Dhw",
+      "authorship_tag": "ABX9TyMLcH8dh3w379MiyBpLJJv7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,11 +28,46 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "gSLJQBHULPUj",
+        "colab_type": "text"
+      },
+      "source": [
+        "## 1. Fibonacci II : The Iterating\n",
+        "\n",
+        "Let's revisit the Fibonacci numbers generator we did [last time](https://colab.research.google.com/github/cstar-industries/python-3-beginner/blob/master/001-First-Steps/First%20Steps%20-%20Workshop.ipynb), but let's make it much more interesting.\n",
+        "\n",
+        "Write a program that generates the `n` first Fibonacci numbers. E.g. for `n` = `10`, it should output:\n",
+        "\n",
+        "```\n",
+        "0 1 1 2 3 5 8 13 21 34\n",
+        "```\n",
+        "\n",
+        "Use iteration this time. Remember that the state of `a` and `b` needs to change during each loop."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RiQoZ9_vLOs4",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "n = 10\n",
+        "a = 0\n",
+        "b = 1"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "nlFY19L_E0tf",
         "colab_type": "text"
       },
       "source": [
-        "## 3. Mocking SpongeBob text generator\n",
+        "## 2. Mocking SpongeBob text generator\n",
         "\n",
         "Write a program that asks a user to say something then repeats it to them in a mocking fashion, by alternating uppercase and lowercase letters.\n",
         "\n",
